# NightForge

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  WINDOWS.md  conditionals copy 4.ns  install.bat  install.ps1  math_test copy 4.ns  test_functions copy.ns  test_functions_simple copy 2.ns
.github/workflows/: ci.yml  quick.yml  test-converter.yml
assets/scripts/: conditionals.ns  demo.ns  story_chapter1.ns
examples/: stdlib_demo.ns
src/: main.cpp
src/core/: config.h  engine.cpp  engine.h  runtime.cpp  runtime.h  terminal.cpp  terminal.h  terminal_posix.cpp  terminal_posix.h  terminal_win.cpp  terminal_win.h
src/nightscript/: compiler.cpp  compiler.h  host_api.h  lexer.cpp  lexer.h  value.cpp  value.h  vm.cpp  vm.h
src/nightscript/stdlib/: file.cpp  file.h  string.cpp  string.h
src/rendering/: ascii_art.cpp  ascii_art.h  tui_renderer.cpp  tui_renderer.h
tests/: test_arrays.ns  test_strings.ns
tests/benchmarks/: perf_quick.ns  perf_suite.ns
tools/: converter.cpp  nscompile.cpp
